- Removed the javax validation, removed guava. Using native java checks. - Upgraded junit to 5.x - Upgraded dated libs - Moved the build to maven central from s01.oss.sonatype.org - Started handling as a qualified exception instead of runtime exceptions. - Added tests for the changes and fixed the earlier tests.